// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/shared-components/ToastMessage More Snapshot tests with react-test-renderer, but for edge cases edge case where text is empty string 1`] = `
<div
  className="ToastMessage full-width"
>
  
</div>
`;

exports[`app/shared-components/ToastMessage Snapshot tests with react-test-renderer toast message is rendered correctly 1`] = `
<div
  className="ToastMessage full-width"
>
  <div
    className="callout-container"
  >
    <div
      className="callout toast test-class"
    >
      <div
        className="callout-text"
      >
        sample text
      </div>
    </div>
  </div>
</div>
`;
